# clack

./: .gitignore  .releaserc.json  CHANGELOG.md  CLI.md  Cargo.toml  Makefile  README.md  diesel.toml
.github/workflows/: ci.yml  release-build.yml  release.yml
man/: clack.1
migrations/2026-01-15-000001_initial_schema/: down.sql  up.sql
src/: cli.rs  main.rs  main.rs.backup
src/api/: auth.rs  channels.rs  chat.rs  client.rs  files.rs  messages.rs  mod.rs  pins.rs  reactions.rs  search.rs  users.rs
src/cache/: db.rs  mod.rs  models.rs  operations.rs  schema.rs
src/models/: channel.rs  file.rs  message.rs  mod.rs  pin.rs  search.rs  user.rs  workspace.rs
src/output/: auth_formatter.rs  channel_formatter.rs  color.rs  file_formatter.rs  formatter.rs  message_formatter.rs  mod.rs  pager.rs  pin_formatter.rs  search_formatter.rs  thread_formatter.rs  user_formatter.rs  width.rs
src/stream/: mod.rs  search.rs
tasks/: 2026-01-14-first-steps.md  2026-01-15-async-cache-operations.md  2026-01-15-object-caching.md  2026-01-16-cli-interface.md  2026-01-17-cache-refresh.md
tests/: cache_init_test.rs  integration_test.rs
thoughts/shared/plans/: 2026-01-14-clack-initial-implementation.md  2026-01-15-object-caching.md  2026-01-17-cache-refresh-flag.md  2026-01-17-improve-formatting-and-output.md  2026-01-29-clack-ux-improvements.md  2026-01-29-stream-command.md
thoughts/shared/research/: 2026-01-16-cli-interface-slack-api-mapping.md
