[package]
name = "clack"
version = "1.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
termcolor = "1.4"
textwrap = "0.16"
chrono = "0.4"
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel-async = { version = "0.4", features = ["async-connection-wrapper", "deadpool"] }
diesel_migrations = "2.1"
dirs = "5.0"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
